# Grox_chat

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  LICENSE  PLAN.md  README.md  README_CN.md  pyproject.toml
.claude/commands/: grox-code-review.md
latex/: main.aux  main.bbl  main.blg  main.out  main.tex  papers.bib
latex/sections/: 01_introduction.tex  02_related_work.tex  03_methodology.tex  04_experiments.tex  05_conclusion.tex  abstract.tex
scripts/: export_raw_txt.py  export_website.py  generate_log.py
src/agent_chatroom/: api.py  embedding.py  llm_router.py  minimax_client.py  prompts.py  reranker.py
src/grox_chat/: agents.py  api.py  api_throttle.py  broker.py  db.py  fact_daemon.py  graph.py  json_utils.py  librarian_processor.py  llm_router.py  master_graph.py  minimax_client.py  prompts.py  rag.py  reranker.py  server.py  structured_retry.py  tools.py  web.py  writer_processor.py
tests/: test_agents.py  test_api.py  test_broker.py  test_db.py  test_e2e.py  test_embedding.py  test_gemini.py  test_generate_log.py  test_graph.py  test_librarian_processor.py  test_llm_router.py  test_master_graph.py  test_minimax.py  test_rag.py  test_rerank.py  test_server.py  test_tools.py  test_web.py  test_writer_processor.py
