[project]
name = "grox_chat"
version = "0.2.0"
description = "GROX Chat: Gemini Research Orchestration with minimaX -- Chat Only."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.3",
    "httpx>=0.28.1",
    "langchain-core>=1.2.17",
    "langgraph>=1.0.10",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "ruff>=0.15.5",
    "sentence-transformers>=5.2.3",
    "sqlite-vec>=0.1.6",
    "torch>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grox_chat"]
